更新用户领域的聚合和实体